--- a/src/app/secap/energy/residential/detail/residential-detail.component.html
+++ b/src/app/secap/energy/residential/detail/residential-detail.component.html
@@ -19,49 +19,14 @@
         <h4 class="card-title">Energy consumption</h4>
     </div>
     <div class="card-body grid">
-            <div class="col"><strong>Electricity:</strong> {{consumption.Electricity}}{{consumption.Unit}}</div>
-            <div class="col"><strong>Heating:</strong> {{ consumption.Heating}}{{consumption.Unit}}</div>
-            <div class="col"><strong>Natural Gas:</strong> {{consumption.NaturalGas}}{{consumption.Unit}}</div>
+            <div class="col"><strong>Electricity:</strong> {{consumption?.Electricity || 0}}{{consumption?.Unit}}</div>
+            <div class="col"><strong>Heating:</strong> {{ consumption?.Heating || 0}}{{consumption?.Unit}}</div>
+            <div class="col"><strong>Natural Gas:</strong> {{consumption?.NaturalGas || 0}}{{consumption?.Unit}}</div>
     </div>
 </div>
 
 <div class="card">
-    <div class="card-header">
-
-    </div>
     <div class="card-body">
-        <p-table #measurementTable [value]="measurements" dataKey="name" [rows]="10" [loading]="loading"
-                [rowHover]="true" styleClass="p-datatable-gridlines" [paginator]="true" responsiveLayout="scroll">
-
-
-            <ng-template pTemplate="caption">
-                <div class="flex align-items-center justify-content-between">
-                    <h4 class="card-title">Measurements</h4>
-                    <p-button label="New Measurement" icon="pi pi-plus" class="p-button-outlined">
-                    </p-button>
-                </div>
-            </ng-template>
-
-            <ng-template pTemplate="header">
-                <tr>
-                    <th pSortableColumn="name">Id <p-sortIcon field="name"></p-sortIcon></th>
-                    <th pSortableColumn="type">Type <p-sortIcon field="name"></p-sortIcon></th>
-
-                    <th pSortableColumn="value">Amount <p-sortIcon field="value"></p-sortIcon></th>
-                    <th pSortableColumn="unit">Unit <p-sortIcon field="unit"></p-sortIcon></th>
-                    <th pSortableColumn="date">Date <p-sortIcon field="date"></p-sortIcon></th>
-                </tr>
-            </ng-template>
-
-            <ng-template pTemplate="body" let-measurement>
-                <tr>
-                    <td>{{measurement.id}}</td>
-                    <td>{{measurement.type}}</td>
-                    <td>{{measurement.amount}}</td>
-                    <td>{{measurement.unit}}</td>
-                    <td>{{measurement.timestamp}}</td>
-                </tr>
-            </ng-template>
-        </p-table>
+        <app-measurement-table [measurements]="measurements" ></app-measurement-table>
     </div>
 </div>
