--- a/src/app/secap/energy/residential/list/residential-list.component.html
+++ b/src/app/secap/energy/residential/list/residential-list.component.html
@@ -2,7 +2,16 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <h5>Residential Energy</h5>
+                <p-toolbar>
+                    <h5>Residential Energy</h5>
+
+                    <ng-template pTemplate="right">
+                        <div class="my-2">
+                            <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="onNew()"></button>
+                            <!--                            <button pButton pRipple label="Delete" icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedProducts()" [disabled]="!selectedProducts || !selectedProducts.length"></button>-->
+                        </div>
+                    </ng-template>
+                </p-toolbar>
             </div>
             <div class="card-body">
                 <p-table #buildingTable [value]="buildings" dataKey="name" [rows]="10" [loading]="loading"
