feat(create-building): sync

--- a/src/app/secap/energy/residential/detail/residential-detail.component.html
+++ b/src/app/secap/energy/residential/detail/residential-detail.component.html
@@ -5,11 +5,10 @@
     <div class="card-body p-d-flex p-jc-around p-ai-center">
         <div class="grid">
             <div class="col"><strong>ID:</strong> {{building.id}}</div>
-            <div class="col"><strong>Name:</strong> {{building.name}}</div>
-            <div class="col"><strong>Province:</strong> {{building.province}}</div>
-            <div class="col"><strong>District:</strong> {{building.district}}</div>
-            <div class="col"><strong>Neighbourhood:</strong> {{building.neighbourhood}}</div>
-            <div class="col"><strong>Energy:</strong> {{building.energy}}</div>
+            <div class="col"><strong>Type:</strong> {{building.type}}</div>
+            <div class="col"><strong>Province:</strong> {{building.address.province}}</div>
+            <div class="col"><strong>District:</strong> {{building.address.district}}</div>
+            <div class="col"><strong>Region:</strong> {{building.address.region}}</div>
         </div>
     </div>
 </div>
