--- a/src/app/secap/energy/residential/common/components/measurement-table/measurement-table.component.html
+++ b/src/app/secap/energy/residential/common/components/measurement-table/measurement-table.component.html
@@ -38,6 +38,11 @@
             <form [formGroup]="createMeasurementForm" class="p-fluid">
                 <div class="grid">
                     <div class="col-12 md:col-6 lg:col-6">
+                        <label for="typeHeader" class="p-d-block">Header</label>
+                        <p-dropdown id="typeHeader" [options]="measurementTypeHeaders" (onChange)="onHeaderChange($event)" formControlName="typeHeader" class="p-d-block"/>
+                    </div>
+
+                    <div class="col-12 md:col-6 lg:col-6">
                         <label for="type" class="p-d-block">Type</label>
                         <p-dropdown id="type" [options]="measurementTypes" formControlName="type" class="p-d-block"/>
                     </div>
