--- a/src/app/secap/energy/residential/common/components/measurement-table/measurement-table.component.html
+++ b/src/app/secap/energy/residential/common/components/measurement-table/measurement-table.component.html
@@ -12,7 +12,7 @@
 
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="name">Id <p-sortIcon field="name"></p-sortIcon></th>
+<!--                <th pSortableColumn="name">Id <p-sortIcon field="name"></p-sortIcon></th>-->
                 <th pSortableColumn="type">Type <p-sortIcon field="name"></p-sortIcon></th>
 
                 <th pSortableColumn="value">Amount <p-sortIcon field="value"></p-sortIcon></th>
@@ -23,7 +23,7 @@
 
         <ng-template pTemplate="body" let-measurement>
             <tr>
-                <td>{{measurement.id}}</td>
+<!--                <td>{{measurement.id}}</td>-->
                 <td>{{measurement.type}}</td>
                 <td>{{measurement.amount}}</td>
                 <td>{{measurement.unit}}</td>
@@ -33,7 +33,7 @@
     </p-table>
 
     <ng-template [ngIf]="createDialog">
-        <p-dialog header="Create Measurement" [(visible)]="createDialog" [modal]="true" [breakpoints]="{ '960px': '75vw' }" [style]="{ width: '50vw', height:'32vw'  }">
+        <p-dialog header="Create Measurement" [(visible)]="createDialog" [modal]="true" [breakpoints]="{ '960px': '85vw' }" [style]="{ width: '55vw', height:'45vw'  }">
 
             <form [formGroup]="createMeasurementForm" class="p-fluid">
                 <div class="grid">
