updates for reports

--- a/src/app/secap/report/reportPage/main-report-page.component.html
+++ b/src/app/secap/report/reportPage/main-report-page.component.html
@@ -40,13 +40,14 @@
             [(ngModel)]="selectedEmission"
             placeholder="Emission Type"/>
     
+            <!--
             <p-dropdown
             class="mr-2"
             [options]="gasTypes"
             [(ngModel)]="selectedGas"
             placeholder="Gas Type"  
             [disabled]="selectedEmission !== 'Total'">
-            </p-dropdown>
+            </p-dropdown>-->
             
             <p-dropdown
             class="mr-2"
